--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
     "@ui-kitten/components": "^4.4.1",
-    "@ui-kitten/eva-icons": "4.4.1",
+    "@ui-kitten/eva-icons": "^4.4.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-svg": "^9.13.6"
