--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
+    "@react-native-community/masked-view": "^0.1.8",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
     "@ui-kitten/components": "^4.4.1",
     "@ui-kitten/eva-icons": "^4.4.1",
+    "jsc-android": "^241213.1.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
     "react-native-svg": "^9.13.6"
-    
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
